--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,10 @@ dist-ssr
 temp/*
 temp
 
+# Prisma
+prisma/migrations
+prisma/migrations/*
+
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
